--- a/view/loginAction.pug
+++ b/view/loginAction.pug
@@ -2,7 +2,7 @@ block content
     .main.container
         .row
             .col-md-6.col-md-offset-3
-                h1.display-4.m-b-2 Sign Up
+                h1.display-4.m-b-2 Login
 
                 // register form
                 form(method='POST' action='/LOGIN')
