--- a/view/loginAction.pug
+++ b/view/loginAction.pug
@@ -5,7 +5,7 @@ block content
                 h1.display-4.m-b-2 Login
 
                 // register form
-                form(method='POST' action='/LOGIN')
+                form(method='POST' action='/login')
                     div.form-group
                         label(for='em') Email:
                         input#em.form-control(type='email' name='email')
