--- a/view/signAction.pug
+++ b/view/signAction.pug
@@ -5,7 +5,7 @@ block content
                 h1.display-4.m-b-2 Sign Up
 
                 // register form
-                form(method='GET' action='/login')
+                form(method='POST' action='view/loginAction.pug')
                     div.form-group
                         label(for='name') Name:
                         input#name.form-control(type='text', placeholder='first and last' name='name')
