--- a/view/signAction.pug
+++ b/view/signAction.pug
@@ -6,7 +6,7 @@ block content
 
                 // register form
 
-                form(method='POST' action='/')
+                form(method='POST' action='/login')
                     div.form-group
                         label(for='name') Name:
                         input#name.form-control(type='text', placeholder='first and last' name='name')
