--- a/view/loginAction.pug
+++ b/view/loginAction.pug
@@ -6,8 +6,8 @@ block content
             .col-md-6.col-md-offset-3
                 h1.display-4.m-b-2 Login
 
-                // register form
-                form(method='POST' action='/login')
+                // login form
+                form(method='POST' action='/profile')
                     div.form-group
                         label(for='em') Email:
                         input#em.form-control(type='email' name='email')
