--- a/view/profileAction.pug
+++ b/view/profileAction.pug
@@ -13,5 +13,5 @@ block content
                         input#em.form-control(type='email' name='email')
                     div.form-group
                         label(for='pw') Password:
-                        input#pw.form-control(type='password' name='password')
+                        input#pw.form-control(type='password' name='Password')
                     button.btn.btn-primary(type='submit') Login
