--- a/view/profileAction.pug
+++ b/view/profileAction.pug
@@ -4,14 +4,4 @@ block content
     .main.container
         .row
             .col-md-6.col-md-offset-3
-                h1.display-4.m-b-2 Login
-
-                // login form
-                form(method='POST' action='/profile')
-                    div.form-group
-                        label(for='em') Email:
-                        input#em.form-control(type='email' name='email')
-                    div.form-group
-                        label(for='pw') Password:
-                        input#pw.form-control(type='password' name='Password')
-                    button.btn.btn-primary(type='submit') Login
+                h1.display-4.m-b-2 Profile
