--- a/view/profileAction.pug
+++ b/view/profileAction.pug
@@ -9,7 +9,7 @@ block content
                 // edit
                 button.btn.btn-primary(type='logout') Logout
 
-                form(method='POST' action='/profile')
+                form(method='POST' action='/listEmail')
                     div.form-group
                         label(for='name') Name:
                         input#name.form-control(type='text', placeholder='Your name' name='name')
@@ -19,5 +19,5 @@ block content
                                 input#lastname.form-control(type='text', placeholder='Lastname' name='lastname')
                         div.form-group
                                 label(for='domaine') Domaine:
-                                input#domaine
+                                input#domaine.form-control(type='text', placeholder='Domain' name='domain')
                     button.btn.btn-primary(type='submit') OK
