--- a/view/loginAction.pug
+++ b/view/loginAction.pug
@@ -10,8 +10,8 @@ block content
                 form(method='POST' action='/profile')
                     div.form-group
                         label(for='em') Email:
-                        input#em.form-control(type='email' name='email')
+                        input#em.form-control(type='email' name='email' required)
                     div.form-group
                         label(for='pw') Password:
-                        input#pw.form-control(type='password' name='password')
+                        input#pw.form-control(type='password' name='password' required)
                     button.btn.btn-primary(type='submit') Login
