--- a/view/profileAction.pug
+++ b/view/profileAction.pug
@@ -4,20 +4,21 @@ block content
     .main.container
         .row
             .col-md-6.col-md-offset-3
+                button.btn.btn-primary(type='logout' class='pull-right') Logout
                 h1.display-4.m-b-2 Profile
 
                 // edit
-                button.btn.btn-primary(type='logout') Logout
+                
 
                 form(method='POST' action='/profileEmail')
                     div.form-group
                         label(for='name') Name:
                         input#name.form-control(type='text', placeholder='First name' name='firstname')
 
-                        div.form-group
-                                label(for='lastname') Lastname:
-                                input#lastname.form-control(type='text', placeholder='Last name' name='lastname')
-                        div.form-group
-                                label(for='domaine') Domaine:
-                                input#domaine.form-control(type='text', placeholder='Domain' name='domain')
+                    div.form-group
+                        label(for='lastname') Lastname:
+                        input#lastname.form-control(type='text', placeholder='Last name' name='lastname')
+                    div.form-group
+                        label(for='domaine') Domaine:
+                        input#domaine.form-control(type='text', placeholder='Domain' name='domain')
                     button.btn.btn-primary(type='submit') OK
