--- a/view/userTableAction.pug
+++ b/view/userTableAction.pug
@@ -1,19 +1,23 @@
 include profileAction
-table.table
-    thead
-        tr
-            th
-                th Prenom
-                th Nom
-                th Domaine
-                th e-mail
-    tbody
-        each mail in mails
-            tr
-                td
-                    td fName
-                    td lName
-                    td domain
-                    td mail
+|
+hr
+|
+block listEmail
+    .main.container
+        .row
+            .col-md-6.col-md-offset-3
+                table.table
+                    tr
+                        th Prenom
+                        th Nom
+                        th Domaine
+                        th e-mail
 
-button.btn.btn-primary(type="submit" onclick="window.open('data/mail.csv')") Download
+                    each mail in mails
+                        tr
+                            td=fName
+                            td=lName
+                            td=domain
+                            td=mail
+
+                button.btn.btn-primary(type="submit" onclick="window.open('data/mail.csv')") Download
